US 1/2/3/4/5/6/7 - REFACTOR VIEW

--- a/app/src/main/res/layout/category_item_list.xml
+++ b/app/src/main/res/layout/category_item_list.xml
@@ -16,8 +16,7 @@
         android:textAppearance="?attr/textAppearanceListItem"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/category_image"
-        tools:text="Category Name" />
+        app:layout_constraintTop_toBottomOf="@+id/category_image"/>
 
     <ImageView
         android:id="@+id/category_image"
