--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -33,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="96dp"
-            android:text="Modifier"
+            android:text="@string/edit_button_category"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.135"
             app:layout_constraintStart_toStartOf="parent"
@@ -45,7 +45,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="200dp"
-            android:text="Ajouter paire"
+            android:text="@string/add_pairs_category"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.135"
             app:layout_constraintStart_toStartOf="parent"
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="200dp"
-            android:text="Voir paires"
+            android:text="@string/see_pairs"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.851"
             app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="96dp"
-            android:text="Supprimer"
+            android:text="@string/delete_button_category"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.855"
             app:layout_constraintStart_toStartOf="parent"
@@ -81,7 +81,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:text="TextView"
             android:textColor="@color/white"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -117,7 +116,7 @@
             android:layout_marginTop="133dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="133dp"
-            android:text="Lancer une partie"
+            android:text="@string/launch_a_part"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="18dp"
@@ -152,7 +151,7 @@
             android:layout_marginTop="23dp"
             android:layout_marginEnd="22dp"
             android:layout_marginBottom="22dp"
-            android:text="OU"
+            android:text="@string/or_button"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold"
