--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -14,7 +14,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="Aide"
+        android:text="@string/help"
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintDimensionRatio="1:0.10"
@@ -40,7 +40,7 @@
             android:id="@+id/modeNormal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mode normal"
+            android:text="@string/normal_game"
             android:textSize="18dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -55,7 +55,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintWidth_percent="0.8"
-            android:text="Dans ce mode, vous aurez à chaque étape, le choix entre deux propositions. Les étapes changeront à chaque choix que vous faites un choix. Il n'y a pas de fin ... Choisissez tant que vous voulez !"
+            android:text="@string/help_normal_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.5"
@@ -81,7 +81,7 @@
             android:id="@+id/modePersonnel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mode personnel"
+            android:text="@string/creation_game"
             android:textSize="18dp"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -95,7 +95,7 @@
             android:id="@+id/textView11"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:text="Dans ce mode, vous aurez la possibilité de créer vos propores catégories et de les éditer comme vous voulez. Vous pourrez ajouter une image et un nom à vos catégories, les modifier, ajouter des questions ..."
+            android:text="@string/personnal_game_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHeight_percent="0.5"
