--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -27,7 +27,7 @@
             android:layout_marginEnd="218dp"
             android:layout_marginBottom="199dp"
             android:elevation="2dp"
-            android:text="Mode normal"
+            android:text="@string/normal_game"
             android:textColor="@color/white"
             android:textSize="23dp"
             android:textStyle="bold"
@@ -44,7 +44,7 @@
             android:layout_marginTop="124dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="121dp"
-            android:text="Jouez en faisant votre choix parmis une \nsérie de questions diverses et variées"
+            android:text="@string/description_normal_game_home"
             android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +79,7 @@
             android:layout_marginTop="82dp"
             android:layout_marginEnd="169dp"
             android:layout_marginBottom="176dp"
-            android:text="Mode création"
+            android:text="@string/creation_game"
             android:textColor="@color/white"
             android:textSize="23dp"
             android:textStyle="bold"
@@ -96,7 +96,7 @@
             android:layout_marginTop="133dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="133dp"
-            android:text="Créez et jouez avec vos propres catégories"
+            android:text="@string/creation_game_description"
             android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -130,7 +130,7 @@
             android:layout_marginTop="23dp"
             android:layout_marginEnd="22dp"
             android:layout_marginBottom="22dp"
-            android:text="OU"
+            android:text="@string/or_button"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold"
