--- a/app/src/main/res/layout/pair_item_list.xml
+++ b/app/src/main/res/layout/pair_item_list.xml
@@ -23,7 +23,6 @@
             android:id="@+id/textChoiceOne"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:visibility="invisible"
@@ -36,7 +35,7 @@
             android:id="@+id/buttonChoiceOne"
             android:layout_width="103dp"
             android:layout_height="29dp"
-            android:text="Voir image"
+            android:text="@string/see_image_button"
             android:textSize="8sp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -74,7 +73,6 @@
             android:id="@+id/textChoiceTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:visibility="invisible"
@@ -89,7 +87,7 @@
             android:id="@+id/buttonChoiceTwo"
             android:layout_width="103dp"
             android:layout_height="29dp"
-            android:text="Voir image"
+            android:text="@string/see_image_button"
             android:textSize="8sp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
