--- a/app/src/main/res/layout/fragment_create_category.xml
+++ b/app/src/main/res/layout/fragment_create_category.xml
@@ -15,7 +15,7 @@
         android:id="@+id/Titile"
         android:layout_width="196dp"
         android:layout_height="34dp"
-        android:text="Créer une catégorie"
+        android:text="@string/create_category_title"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="22dp"
@@ -33,7 +33,7 @@
         android:layout_height="36dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
-        android:text="Image"
+        android:text="@string/picture_input"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -45,7 +45,7 @@
         android:id="@+id/imageCategory"
         android:layout_width="67dp"
         android:layout_height="27dp"
-        android:text="Image *"
+        android:text="@string/picture_input_obligatory"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,7 +59,7 @@
         android:id="@+id/imageCategory2"
         android:layout_width="58dp"
         android:layout_height="22dp"
-        android:text="Nom *"
+        android:text="@string/name_input_obligatory"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -99,7 +99,7 @@
         android:layout_height="38dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
-        android:text="Valider"
+        android:text="@string/confirm_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.513"
