--- a/app/src/main/res/layout/fragment_create_pair.xml
+++ b/app/src/main/res/layout/fragment_create_pair.xml
@@ -15,7 +15,7 @@
         android:id="@+id/TitleAddPair"
         android:layout_width="196dp"
         android:layout_height="34dp"
-        android:text="Ajouter une paire"
+        android:text="@string/add_pairs_title"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="22dp"
@@ -33,7 +33,7 @@
         android:layout_height="47dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
-        android:text="Image"
+        android:text="@string/picture_input"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
@@ -46,7 +46,7 @@
         android:layout_width="71dp"
         android:layout_height="23dp"
         android:layout_marginBottom="12dp"
-        android:text="Choix 1"
+        android:text="@string/choix_1_input"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/imageCategory2"
@@ -72,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="OU"
+        android:text="@string/or_button"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +82,7 @@
         android:id="@+id/imageCategory"
         android:layout_width="67dp"
         android:layout_height="27dp"
-        android:text="Image"
+        android:text="@string/picture_input"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -109,7 +109,7 @@
         android:id="@+id/imageCategory2"
         android:layout_width="58dp"
         android:layout_height="22dp"
-        android:text="Texte"
+        android:text="@string/texte"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -124,7 +124,7 @@
         android:layout_width="71dp"
         android:layout_height="23dp"
         android:layout_marginBottom="12dp"
-        android:text="Choix 2"
+        android:text="@string/choix_2_input"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toTopOf="@+id/texteChoix2"
@@ -136,7 +136,7 @@
         android:id="@+id/texteChoix2"
         android:layout_width="58dp"
         android:layout_height="22dp"
-        android:text="Texte"
+        android:text="@string/texte"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -151,7 +151,7 @@
         android:id="@+id/textView14"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="OU"
+        android:text="@string/or_button"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -178,7 +178,7 @@
         android:layout_height="46dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
-        android:text="Image"
+        android:text="@string/picture_input"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
@@ -203,7 +203,7 @@
         android:id="@+id/imageCategoryChoix2"
         android:layout_width="67dp"
         android:layout_height="27dp"
-        android:text="Image"
+        android:text="@string/picture_input"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -219,7 +219,7 @@
         android:layout_height="38dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
-        android:text="Valider"
+        android:text="@string/confirm_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
