--- a/app/src/main/res/layout/fragment_edit_category.xml
+++ b/app/src/main/res/layout/fragment_edit_category.xml
@@ -15,7 +15,7 @@
         android:id="@+id/TitleEditCategory"
         android:layout_width="243dp"
         android:layout_height="37dp"
-        android:text="Modifier la catégorie"
+        android:text="@string/edit_category_title"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="22dp"
@@ -34,7 +34,7 @@
         android:layout_height="36dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
-        android:text="Image"
+        android:text="@string/picture_input"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -46,7 +46,7 @@
         android:id="@+id/imageCategory"
         android:layout_width="67dp"
         android:layout_height="27dp"
-        android:text="Image *"
+        android:text="@string/picture_input_obligatory"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -60,7 +60,7 @@
         android:id="@+id/imageCategory2"
         android:layout_width="58dp"
         android:layout_height="22dp"
-        android:text="Nom *"
+        android:text="@string/name_input_obligatory"
         android:textColor="@color/white"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -101,7 +101,7 @@
         android:layout_height="38dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_help"
-        android:text="Modifier"
+        android:text="@string/edit_button_category"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
