--- a/app/src/main/res/layout/fragment_personnel.xml
+++ b/app/src/main/res/layout/fragment_personnel.xml
@@ -17,7 +17,7 @@
         android:layout_height="0dp"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_add"
-        android:text="Ajouter"
+        android:text="@string/add_buton"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
         android:id="@+id/textView8"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:text="Catégories"
+        android:text="@string/categories_title"
         android:textSize="25sp"
         app:layout_constraintHeight_percent="0.05"
         app:layout_constraintWidth_percent="1"
