--- a/app/src/main/res/layout/fragment_play_game.xml
+++ b/app/src/main/res/layout/fragment_play_game.xml
@@ -31,7 +31,6 @@
             android:layout_marginTop="124dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="121dp"
-            android:text="Texte"
             android:visibility="invisible"
             android:textAlignment="center"
             android:textColor="@color/white"
@@ -74,7 +73,6 @@
             android:layout_marginTop="133dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="133dp"
-            android:text="Texte"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="18dp"
@@ -120,7 +118,7 @@
             android:layout_marginTop="23dp"
             android:layout_marginEnd="22dp"
             android:layout_marginBottom="22dp"
-            android:text="OU"
+            android:text="@string/or_button"
             android:textColor="@color/white"
             android:textSize="20dp"
             android:textStyle="bold"
