--- a/app/src/main/res/layout/fragment_statistiques.xml
+++ b/app/src/main/res/layout/fragment_statistiques.xml
@@ -14,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:gravity="center"
-        android:text="Statistiques"
+        android:text="@string/statistics_title"
         android:textColor="@color/white"
         android:textSize="20dp"
         app:layout_constraintDimensionRatio="1:0.10"
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
-            android:text="Nombre de paires : "
+            android:text="@string/number_of_pairs"
             android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:text="0"
+            android:text="@string/number_0"
             android:textColor="@color/white"
             android:textSize="75dp"
             android:textStyle="bold"
@@ -88,7 +88,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
-            android:text="Nombre de catégories : "
+            android:text="@string/number_of_categories"
             android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -103,7 +103,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:text="0"
+            android:text="@string/number_0"
             android:textColor="@color/white"
             android:textSize="75dp"
             android:textStyle="bold"
@@ -134,7 +134,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
-            android:text="Nombre de swipes : "
+            android:text="@string/number_of_swipes"
             android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -149,7 +149,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:text="0"
+            android:text="@string/number_0"
             android:textColor="@color/white"
             android:textSize="75dp"
             android:textStyle="bold"
@@ -178,7 +178,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:autoSizeTextType="uniform"
-            android:text="Parties jouées : "
+            android:text="@string/game_played"
             android:textColor="@color/white"
             android:textSize="18dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -193,7 +193,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:gravity="center"
-            android:text="0"
+            android:text="@string/number_0"
             android:textColor="@color/white"
             android:textSize="75dp"
             android:textStyle="bold"
