--- a/app/src/main/res/layout/pair_item_list.xml
+++ b/app/src/main/res/layout/pair_item_list.xml
@@ -35,7 +35,7 @@
             android:id="@+id/buttonChoiceOne"
             android:layout_width="103dp"
             android:layout_height="29dp"
-            android:text="@string/see_image_button"
+            android:text="Voir image"
             android:textSize="8sp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -78,7 +78,7 @@
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.476"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.488" />
@@ -87,12 +87,11 @@
             android:id="@+id/buttonChoiceTwo"
             android:layout_width="103dp"
             android:layout_height="29dp"
-            android:text="@string/see_image_button"
+            android:text="Voir image"
             android:textSize="8sp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.47"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
