US 3/5/7 - add icons

--- a/app/src/main/res/layout/fragment_create_category.xml
+++ b/app/src/main/res/layout/fragment_create_category.xml
@@ -43,7 +43,8 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:background="@drawable/component_input_text"
-            android:drawableLeft="@drawable/icon_help"
+            android:drawableLeft="@drawable/icon_picture"
+            android:paddingLeft="4dp"
             android:text="@string/picture_input"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintWidth_percent="0.9"
@@ -124,7 +125,8 @@
         android:layout_width="220dp"
         android:layout_height="38dp"
         android:background="@drawable/component_input_text"
-        android:drawableLeft="@drawable/icon_help"
+        android:drawableLeft="@drawable/validate_icon"
+        android:paddingLeft="4dp"
         android:text="@string/confirm_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
