--- a/app/src/main/res/layout/fragment_create_pair.xml
+++ b/app/src/main/res/layout/fragment_create_pair.xml
@@ -41,7 +41,8 @@
             android:layout_width="257dp"
             android:layout_height="47dp"
             android:background="@drawable/component_input_text"
-            android:drawableLeft="@drawable/icon_help"
+            android:drawableLeft="@drawable/icon_picture"
+            android:paddingLeft="4dp"
             android:text="@string/picture_input"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -186,7 +187,8 @@
             android:layout_width="262dp"
             android:layout_height="46dp"
             android:background="@drawable/component_input_text"
-            android:drawableLeft="@drawable/icon_help"
+            android:drawableLeft="@drawable/icon_picture"
+            android:paddingLeft="4dp"
             android:text="@string/picture_input"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -227,7 +229,8 @@
             android:layout_width="220dp"
             android:layout_height="38dp"
             android:background="@drawable/component_input_text"
-            android:drawableLeft="@drawable/icon_help"
+            android:drawableLeft="@drawable/validate_icon"
+            android:paddingLeft="4dp"
             android:text="@string/confirm_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
