--- a/app/src/main/res/layout/fragment_edit_category.xml
+++ b/app/src/main/res/layout/fragment_edit_category.xml
@@ -43,8 +43,9 @@
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:background="@drawable/component_input_text"
-            android:drawableLeft="@drawable/icon_help"
+            android:drawableLeft="@drawable/icon_picture"
             android:text="@string/picture_input"
+            android:paddingLeft="4dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.504"
@@ -125,14 +126,18 @@
         android:layout_width="220dp"
         android:layout_height="38dp"
         android:background="@drawable/component_input_text"
-        android:drawableLeft="@drawable/icon_help"
+        android:drawableLeft="@drawable/validate_icon"
         android:text="@string/edit_button_category"
+        android:gravity="center"
+        android:paddingLeft="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.834" />
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
