--- a/app/src/main/res/layout/fragment_personnel.xml
+++ b/app/src/main/res/layout/fragment_personnel.xml
@@ -13,8 +13,8 @@
 
     <Button
         android:id="@+id/CreateCategory"
-        android:layout_width="132dp"
-        android:layout_height="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/component_input_text"
         android:drawableLeft="@drawable/icon_add"
         android:text="@string/add_buton"
