--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/normalGame"
         android:layout_width="match_parent"
-        android:layout_height="290dp"
+        android:layout_height="300dp"
         android:layout_marginBottom="310dp"
         android:background="@color/main_blue"
         android:clickable="true"
@@ -54,7 +54,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/personnel"
         android:layout_width="match_parent"
-        android:layout_height="290dp"
+        android:layout_height="300dp"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="318dp"
         android:background="@color/main_red"
@@ -103,17 +103,15 @@
         android:layout_height="72dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="160dp"
-        android:layout_marginTop="264dp"
-        android:layout_marginEnd="179dp"
-        android:layout_marginBottom="264dp"
         android:background="@drawable/component_circle"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499">
 
         <TextView
             android:id="@+id/textView2"
@@ -129,8 +127,10 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
